crates/parse/src/tests/snapshots/if_bool_1.snap
---
source: crates/parse/src/tests.rs
assertion_line: 211
expression: "(test[1], ast, ast_string)"
---
- "if true { foo } else { bar }"
- Ok:
    nodes:
      - kind:
          Cond:
            cond_expr:
              kind:
                Lit:
                  value:
                    Bool: true
                  ty: ~
            then_block:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: foo
                          ty: ~
                  ty: ~
            else_block:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: bar
                          ty: ~
                  ty: ~
            ty: ~
- "(if true '(foo) '(bar))"

