crates/parse/src/tests/snapshots/if_bool_2.snap
---
source: crates/parse/src/tests.rs
assertion_line: 211
expression: "(test[1], ast, ast_string)"
---
- "if false { foo } else { bar }"
- Ok:
    nodes:
      - kind:
          Cond:
            cond_expr:
              kind:
                Lit:
                  value:
                    Bool: false
                  ty: ~
            then_block:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: foo
                          ty: ~
                  ty: ~
            else_block:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: bar
                          ty: ~
                  ty: ~
            ty: ~
- "(if false '(foo) '(bar))"

