crates/parse/src/tests/snapshots/if_then.snap
---
source: crates/parse/src/tests.rs
assertion_line: 211
expression: "(test[1], ast, ast_string)"
---
- "if a > b { foo }"
- Ok:
    nodes:
      - kind:
          Cond:
            cond_expr:
              kind:
                BinOp:
                  op: Gt
                  lhs:
                    kind:
                      Ident:
                        name: a
                        ty: ~
                  rhs:
                    kind:
                      Ident:
                        name: b
                        ty: ~
                  ty: ~
            then_block:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: foo
                          ty: ~
                  ty: ~
            else_block: ~
            ty: ~
- "(if (> a b) '(foo))"

