crates/parse/src/tests/snapshots/logical_ops_complex_parens.snap
---
source: crates/parse/src/tests.rs
assertion_line: 237
expression: "(test[1], ast, ast_string)"
---
- x == 1 && (y == 2 || z == 3)
- Ok:
    nodes:
      - kind:
          BinOp:
            op: And
            lhs:
              kind:
                BinOp:
                  op: Eq
                  lhs:
                    kind:
                      Ident:
                        name: x
                        ty: ~
                  rhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 1
                        ty: ~
                  ty: ~
            rhs:
              kind:
                BinOp:
                  op: Or
                  lhs:
                    kind:
                      BinOp:
                        op: Eq
                        lhs:
                          kind:
                            Ident:
                              name: y
                              ty: ~
                        rhs:
                          kind:
                            Lit:
                              value:
                                UInt64: 2
                              ty: ~
                        ty: ~
                  rhs:
                    kind:
                      BinOp:
                        op: Eq
                        lhs:
                          kind:
                            Ident:
                              name: z
                              ty: ~
                        rhs:
                          kind:
                            Lit:
                              value:
                                UInt64: 3
                              ty: ~
                        ty: ~
                  ty: ~
            ty: ~
- (&& (== x 1) (|| (== y 2) (== z 3)))

